# agent

./: .gitignore  README.md  paper_backup_vera_rl_verifier_uncertainty.md  paper_main_c3rl_counterfactual_cost_credit.md  paper_main_pirl_prompt_interface_randomization.md  run_job.sh  setup_cluster.sh
agent-rl-core/: .gitignore  README.md  pyproject.toml
agent-rl-core/configs/: base.yaml
agent-rl-core/docs/: architecture.md
agent-rl-core/examples/: minimal_run.md
agent-rl-core/scripts/: eval_baseline.py  train_baseline.py
agent-rl-core/src/agent_rl_core/: __init__.py  interfaces.py  runner.py  toy.py  trainer.py
agent-rl-core/tests/: test_smoke.py
datasets/code/: README.md
draft_md/: 00_overview_updated_plan.md  01_paper_main_c3rl.md  02_paper_second_pirl.md  03_vera_module_for_c3.md
paper-c3rl/: README.md  pyproject.toml
paper-c3rl/configs/: train_c3rl.yaml  train_c3rl_strict.yaml
paper-c3rl/methods/c3rl/: __init__.py  algorithm.py  cost_credit.py
paper-c3rl/references/: related_work.md
paper-c3rl/scripts/: eval.py  train.py
paper-pirl/: README.md  pyproject.toml
paper-pirl/configs/: train_pirl.yaml
paper-pirl/methods/pirl/: __init__.py  algorithm.py
paper-pirl/references/: related_work.md
paper-pirl/scripts/: eval.py  train.py
paper-vera-rl/: .gitignore  README.md  pyproject.toml
paper-vera-rl/configs/: train_vera.yaml
paper-vera-rl/methods/vera_rl/: __init__.py  algorithm.py
paper-vera-rl/references/: related_work.md
paper-vera-rl/scripts/: eval.py  train.py
scripts/: prepare_code_dataset_hf.py  validate_code_jsonl.py
scripts/slurm/: c3_hf_common.sh  run_baseline.sh  run_c3_hf_1gpu.sh  run_c3_hf_4gpu.sh  run_c3_main.sh  run_pirl_main.sh  run_vera_aux.sh  setup_env.sh  test.sh
shared/envs/: code_env.py  sql_env.py
